# assessment-app

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  LICENSE  NOTICE  README.md  alembic.ini  bootstrap_inventory.txt  cbor2_hashes.txt  check_users.py  env.production.example  missing_used_keys.json  nist_sp_800-53r5_controls.json  pyproject.toml  tailwind.config.cjs  temp_convert_tools.py  temp_plan.py  update_bia_templates.py  update_bia_templates_2.py  update_bia_templates_final.py  update_translations.py
.specify/: feature.json  init-options.json
ansible/: README.md
bia_app/: .env.example  README.md  requirements.txt  run.py
cleanup_script/: cleanup.sh.example
csa_app/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  autoapp.py  docker-compose.prod.yml  docker-compose.yml  iso_27002_controls.json  pyproject.toml  tox.ini
csa_app/app/: __init__.py  config.py  extensions.py  i18n.py
csa_app/app/auth/: __init__.py  mfa.py
csa_app/app/blueprints/: __init__.py
csa_app/app/blueprints/admin/: __init__.py  routes.py
csa_app/app/blueprints/assessments/: __init__.py  routes.py
csa_app/app/blueprints/auth/: __init__.py  routes.py
csa_app/app/blueprints/public/: __init__.py  routes.py
csa_app/app/forms/: __init__.py  admin.py  assessment.py  auth.py  profile.py
csa_app/app/models/: __init__.py  assessment.py  audit.py  control.py  user.py
csa_app/app/services/: __init__.py  control_importer.py
csa_app/app/templates/: base.html  public_index.html
csa_app/app/templates/admin/: import_controls.html  manage_user_mfa.html  users.html
csa_app/app/templates/assessments/: assign.html  detail.html  export.html  overview.html  start.html
csa_app/app/templates/auth/: login.html  mfa_enroll.html  mfa_verify.html  profile.html  register.html
csa_app/app/translations/: en.json  nl.json
csa_app/docs/: api-routes.md  architecture.md  deployment.md  go_live_preparation.md  hand_over_checklist.md  mfa.md  post_implementation_plan.md  release_notes.md  security_checklist.md  test_strategy.md  uat_plan.md  user_guide.md
csa_app/migrations/: env.py  script.py.mako
csa_app/migrations/versions/: 20251018_0001_initial_schema.py  20251018_0002_add_theme_preference.py  20251018_0003_add_manager_role.py  20251018_0004_add_assessment_review_comment.py  20251018_0005_normalize_control_identifier.py
csa_app/scripts/: manage.ps1
csa_app/tests/: conftest.py  factories.py  test_admin_mfa.py  test_auth.py  test_control_importer.py  test_mfa_utils.py
docker/: Dockerfile  README.md  backup-db.sh  compose.backup.yml  compose.prod.yml  encrypt_backup.py  entrypoint.sh  env.production.example  example.compose.adminer.yml  example.compose.backup.yml  (+10 more)
(+438 files in other folders)
